[package]
name = "nexuslog"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Fast async logger with Python bindings"
repository = "https://github.com/river-walras/nexuslogger"
readme = "README.md"
keywords = ["logging", "async", "fast"]
categories = ["development-tools::debugging"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.43"
crossbeam-channel = "0.5.15"
log = { version = "0.4.29", features = ["std"] }
pyo3 = { version = "0.27.2", optional = true }
arrayvec = "0.7.4"

[features]
default = []
python = ["pyo3", "pyo3/extension-module"]
